<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Username"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:layout_above="@+id/emailEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Email Address"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:layout_above="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up!"
        android:background="@drawable/login_button"
        android:textColor="@drawable/login_button_color"
        android:id="@+id/signUpButton"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText" />
</RelativeLayout>
